# homework2.1

./: Dockerfile  UML.txt  main.py  pyproject.toml  Диаграмма без названия.drawio
