[tool.poetry]
name = "homework-2-2"
version = "0.1.0"
description = "try create poetry and use docker"
authors = ["serhiikhkr <05hello.world11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
